feat: add readme

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=LXG_DC_Motor_driver
 version=1.0.0
-author=User
-maintainer=User
+author=laxusgee
+maintainer=laxusgee
 sentence=A simple library to control DC motors.
 paragraph=Provides methods to control speed and direction of DC motors using an H-bridge or similar driver.
 category=Device Control
-url=
+url=https://github.com/laxusgooee/dc-motor
 architectures=*
