--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.1.000
 author=laxusgee
 maintainer=laxusgee
 sentence=A simple library to control DC motors.
-paragraph=Provides methods to control speed and direction of DC motors using an H-bridge or similar driver.
+paragraph=Provides methods to control speed and direction of DC motors using an H-bridge or similar driver. This version introduces a new API with a car-like interface, including gears and acceleration/deceleration.
 category=Device Control
-url=https://github.com/laxusgooee/dc-motor
+url=https://github.com/laxusgooee/LXG_DC_Motor_driver
 architectures=*
